--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,24 +4,7 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A Redux Saga based state machine runner",
-    "docs": {
-      "doc1": {
-        "title": "Latin-ish",
-        "sidebar_label": "Example Page"
-      },
-      "doc2": {
-        "title": "document number 2"
-      },
-      "doc3": {
-        "title": "This is document number 3"
-      },
-      "doc4": {
-        "title": "Other Document"
-      },
-      "doc5": {
-        "title": "Fifth Document"
-      }
-    },
+    "docs": {},
     "links": {},
     "categories": {}
   },
